styling provided & done as of now

--- a/index.html
+++ b/index.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lead Tracker</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
     <body>
-        <section>
-            <form>
-                <input type="text" id="leadName" placeholder="Lead Name" required>
-            </form>
+        <input type="text" id="input-el" placeholder="Lead Name" required>
             <button id="input-btn">Save</button>
-            <button id="delete-btn">Delete</button>
             <button id="tab-btn">Tabs</button>
-        </section>
+            <button id="delete-btn">Delete</button>
+        <script src="script.js"></script>
     </body>
 </html>
