--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
     <body>
         <input type="text" id="input-el" placeholder="Lead Name" required>
-            <button id="input-btn">Save</button>
+            <button id="save-btn">Save</button>
             <button id="tab-btn">Tabs</button>
             <button id="delete-btn">Delete</button>
-        <script src="script.js"></script>
+            <ul id="ul-el">
+
+            </ul>
+        <script src="js/script.js"></script>
     </body>
 </html>
